--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<a href="404.html">ссылка</a>
+<!doctype html>
+<html>
+  <head>
+    !
+  </head>
+  <body>
+    <a href="404.html">ссылка</a>
+   </body>
+</html> 
