--- a/receipts/zapekanki.html
+++ b/receipts/zapekanki.html
@@ -8,7 +8,20 @@
 <body>
 	<h1 name="top">10 лучших запеканок</h1>
 	<div><img src="cat.jpg" alt="cat" width="500px"></div>
-	<h2>
+	<div>
+		<h3>Меню</h3>
+		<a href="#1">Запеканка с фаршем и гречкой</a><br><br>
+		<a href="#2">Картофельная запеканка с фаршем</a><br><br>
+		<a href="#3">Картофельная запеканка с копчёным окороком</a><br><br>
+		<a href="#4">Запеканка из полуфабрикатов</a><br><br>
+		<a href="#5">Нежнейшая мясная запеканка на сливках</a><br><br>
+		<a href="#6">Запеканка по-неаполитански</a><br><br>
+		<a href="#7">Творожная запеканка как в детском саду</a><br><br>
+		<a href="#8">Картофельная запеканка с тефтелями</a><br><br>
+		<a href="#9">Нежнейшая творожная запеканка без муки и без манки</a><br><br>
+		<a href="#10">Запеканка из кабачков с сыром</a><br><br>
+	</div>
+	<h2 id="1">
 		1 - Запеканка с фаршем и гречкой
 	</h2>
 	<p class="ingredients">
@@ -31,7 +44,7 @@
 			<li>Запекала в духовке 200 градусов 25 минут, достала, присыпала ещё немного тёртым сыром и вернула в духовку на 5 минут</li>
 		</ol>
 	</p>
-	<h2>
+	<h2 id="2">
 		2 - Картофельная запеканка с фаршем
 	</h2>
 	<p class="ingredients">
@@ -54,7 +67,7 @@
 			<li>Запекать минут 20 при температуре 200 градусов</li>
 		</ol>
 	</p>
-	<h2>
+	<h2 id="3">
 		3 - Картофельная запеканка с копчёным окороком
 	</h2>
 	<p class="ingredients">
@@ -79,7 +92,7 @@
 			<li>Запекать при 200 С около 45-55 минут, выключить духовку и оставить запеканку ещё на 5-10 минут</li>
 		</ol>
 	</p>
-	<h2>
+	<h2 id="4">
 		4 - Запеканка из полуфабрикатов 
 	</h2>
 	<p class="ingredients">
@@ -102,7 +115,7 @@
 			<li>Если есть время, можно обжарить фарш с луком, так вкуснее. 5. Выпекать в духовке при t 200°С до зарумянивания сыра</li>
 		</ol>
 	</p>
-	<h2>
+	<h2 id="5">
 		5 - Нежнейшая мясная запеканка на сливках  
 	</h2>
 	<p class="ingredients">
@@ -125,7 +138,7 @@
 			<li>Степень готовности я определяю по ароматному мясному запаху. Удачнее всего запеканка сочетается с квашеной капустой или же любыми овощными салатами</li>
 		</ol>
 	</p>
-	<h2>
+	<h2 id="6">
 		6 - Запеканка по-неаполитански 
 	</h2>
 	<p class="ingredients">
@@ -157,7 +170,7 @@
 			<li>Посыпаем тертым сыром и запекаем в разогретой до 200 градусов духовке в течение 25 минут</li>
 		</ol>
 	</p>
-	<h2>
+	<h2 id="7">
 		7 - Творожная запеканка как в детском саду
 	</h2>
 	<p class="ingredients">
@@ -180,7 +193,7 @@
 			<li>Выпекать в духовке 180-200 С до золотистой корочки</li>
 		</ol>
 	</p>
-	<h2>
+	<h2 id="8">
 		8 - Картофельная запеканка с тефтелями 
 	</h2>
 	<p class="ingredients">
@@ -215,7 +228,7 @@
 			<li>Петрушку вымыть, обсушить и украсить готовое блюдо</li>
 		</ol>
 	</p>
-	<h2>
+	<h2 id="9">
 		9 - Нежнейшая творожная запеканка без муки и без манки
 	</h2>
 	<p class="ingredients">
@@ -237,7 +250,7 @@
 			<li>Полностью остудить и нарезать порционно</li>
 		</ol>
 	</p>
-	<h2>
+	<h2 id="10">
 		10 - Запеканка из кабачков с сыром 
 	</h2>
 	<p class="ingredients">
