--- a/receipts/zapekanki.html
+++ b/receipts/zapekanki.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>10 лучших запеканок</title>
+	<title>Лучшие запеканки</title>
 	<link rel="stylesheet" type="text/css" href="zapekanki.css">
 </head>
 <body>
