--- a/receipts/zapekanki.html
+++ b/receipts/zapekanki.html
@@ -8,19 +8,21 @@
 <body>
 	<h1 name="top">10 лучших запеканок</h1>
 	<div><img src="cat.jpg" alt="cat" width="500px"></div>
-	<div>
+	<p>
+		<div id="menu">
 		<h3>Меню</h3>
-		<a href="#1">Запеканка с фаршем и гречкой</a><br><br>
-		<a href="#2">Картофельная запеканка с фаршем</a><br><br>
-		<a href="#3">Картофельная запеканка с копчёным окороком</a><br><br>
-		<a href="#4">Запеканка из полуфабрикатов</a><br><br>
-		<a href="#5">Нежнейшая мясная запеканка на сливках</a><br><br>
-		<a href="#6">Запеканка по-неаполитански</a><br><br>
-		<a href="#7">Творожная запеканка как в детском саду</a><br><br>
-		<a href="#8">Картофельная запеканка с тефтелями</a><br><br>
-		<a href="#9">Нежнейшая творожная запеканка без муки и без манки</a><br><br>
-		<a href="#10">Запеканка из кабачков с сыром</a><br><br>
-	</div>
+		<a href="#1">Запеканка с фаршем и гречкой</a><br>
+		<a href="#2">Картофельная запеканка с фаршем</a><br>
+		<a href="#3">Картофельная запеканка с копчёным окороком</a><br>
+		<a href="#4">Запеканка из полуфабрикатов</a><br>
+		<a href="#5">Нежнейшая мясная запеканка на сливках</a><br>
+		<a href="#6">Запеканка по-неаполитански</a><br>
+		<a href="#7">Творожная запеканка как в детском саду</a><br>
+		<a href="#8">Картофельная запеканка с тефтелями</a><br>
+		<a href="#9">Нежнейшая творожная запеканка без муки и без манки</a><br>
+		<a href="#10">Запеканка из кабачков с сыром</a><br>
+		</div>
+	</p>
 	<h2 id="1">
 		1 - Запеканка с фаршем и гречкой
 	</h2>
@@ -278,6 +280,10 @@
 		<div>
 			<a href="#top">Наверх!</a>
 		</div>
+	</p>
+	<p id="footer">
+		2021, idevm<br>
+		Пожалуйста, не крадите эту страницу, хотя она не защищена авторским правом
 	</p>
 </body>
 </html>
