--- a/receipts/zapekanki.html
+++ b/receipts/zapekanki.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Лучшие запеканки</title>
-	<link rel="stylesheet" type="text/css" href="zapekanki.css">
+	<link rel="stylesheet" type="text/css" href="zapekanki.css" media="screen and (min-width: 601px)">
+	<link rel="stylesheet" type="text/css" href="zapekanki-mobile.css" media="screen and (max-width: 600px)">
 </head>
 <body>
 	<h1 name="top">10 лучших запеканок</h1>
