--- a/receipts/zapekanki.html
+++ b/receipts/zapekanki.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Лучшие запеканки</title>
-	<link rel="stylesheet" type="text/css" href="zapekanki.css" media="screen and (min-width: 901px)">
-	<link rel="stylesheet" type="text/css" href="zapekanki-mobile.css" media="screen and (max-width: 900px) and (orientation: portrait)">
+	<link rel="stylesheet" type="text/css" href="zapekanki.css" media="screen and (min-device-width: 901px)">
+	<link rel="stylesheet" type="text/css" href="zapekanki-mobile.css" media="screen and (max-device-width: 900px) and (orientation: portrait)">
 </head>
 <body>
 	<h1 name="top">10 лучших запеканок</h1>
