--- a/receipts/zapekanki.html
+++ b/receipts/zapekanki.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<title>Лучшие запеканки</title>
 	<link rel="stylesheet" type="text/css" href="zapekanki.css" media="screen and (min-device-width: 901px)">
-	<link rel="stylesheet" type="text/css" href="zapekanki-mobile.css" media="screen and (max-device-width: 900px)">
+<!-- 	<link rel="stylesheet" type="text/css" href="zapekanki-mobile.css" media="screen and (max-device-width: 900px)">
 </head>
-<body>
+ --><body>
 	<h1 name="top">10 лучших запеканок</h1>
 	<div><img src="cat.jpg" alt="cat" width="500px"></div>
 	<p>
