--- a/receipts/zapekanki.html
+++ b/receipts/zapekanki.html
@@ -8,11 +8,16 @@
  --><!-- 	<link rel="stylesheet" type="text/css" href="zapekanki-mobile.css" media="screen and (max-device-width: 900px)">
 </head>
  --><body>
+ 	<div id="header">
+ 		<span>
+ 			<a href="../index.html">На главную</a>
+ 		</span>
+ 	</div>
 	<h1 name="top">10 лучших запеканок</h1>
 	<div><img src="cat.jpg" alt="cat" width="500px"></div>
-	<p>
 		<div id="menu">
 		<h3>Меню</h3>
+		<p>
 		<a href="#1">Запеканка с фаршем и гречкой</a><br>
 		<a href="#2">Картофельная запеканка с фаршем</a><br>
 		<a href="#3">Картофельная запеканка с копчёным окороком</a><br>
@@ -23,8 +28,8 @@
 		<a href="#8">Картофельная запеканка с тефтелями</a><br>
 		<a href="#9">Нежнейшая творожная запеканка без муки и без манки</a><br>
 		<a href="#10">Запеканка из кабачков с сыром</a><br>
+		</p>
 		</div>
-	</p>
 	<h2 id="1">
 		1 - Запеканка с фаршем и гречкой
 	</h2>
@@ -42,10 +47,10 @@
 	<p class="cooking">
 		Приготовление:
 		<ol>
-			<li>В смеси растительного и сливочного масел обжарила до мягкости луковицы, порезав кубиком и тёртые на крупной тёрке морковки — охладила</li>
-			<li>Смешала с куриным фаршем, хорошо приправила, вымесила до однородности и выложила слоем в форму</li>
-			<li>Отварила гречку, охладила, добавила очищенные и потёртые на крупной тёрке яблоки и тёртый на крупной тёрке полутвердый сыр, помешала хорошо и выложила вторым слоем в форму, слегка приминая</li>
-			<li>Запекала в духовке 200 градусов 25 минут, достала, присыпала ещё немного тёртым сыром и вернула в духовку на 5 минут</li>
+			<li>В смеси растительного и сливочного масел обжарить до мягкости луковицы, порезав кубиком и тёртые на крупной тёрке морковки — охладить</li>
+			<li>Смешать с куриным фаршем, хорошо приправить, вымесить до однородности и выложить слоем в форму</li>
+			<li>Отварить гречку, охладить, добавить очищенные и потёртые на крупной тёрке яблоки и тёртый на крупной тёрке полутвердый сыр, помешать хорошо и выложить вторым слоем в форму, слегка приминая</li>
+			<li>Запекать в духовке 200 градусов 25 минут, достать, присыпать ещё немного тёртым сыром и вернуть в духовку на 5 минут</li>
 		</ol>
 	</p>
 	<h2 id="2">
@@ -116,7 +121,7 @@
 			<li>На дно формы выложить фарш предварительно его посолить-поперчить</li>
 			<li>На него всю заморозку из пакета</li>
 			<li>Залить все сметаной или майонезом и сверху засыпать тертым сыром</li>
-			<li>Если есть время, можно обжарить фарш с луком, так вкуснее. 5. Выпекать в духовке при t 200°С до зарумянивания сыра</li>
+			<li>Если есть время, можно обжарить фарш с луком, так вкуснее. Выпекать в духовке при t 200°С до зарумянивания сыра</li>
 		</ol>
 	</p>
 	<h2 id="5">
@@ -139,7 +144,7 @@
 			<li>Готовый фарш солим, добавляем специи и зелень (по желанию). Отдельно взбиваем яйца со сливками (немного солим) и добавляем яично-молочную смесь в фарш</li>
 			<li>Хорошенько взбиваем вилкой или миксером до однообразной мясной массы. Выкладываем в хорошо смазанную топленым масло и посыпанную сухарями форму</li>
 			<li>Запекаем в духовке при температуре 200-250 градусов до готовности (около 20 минут)</li>
-			<li>Степень готовности я определяю по ароматному мясному запаху. Удачнее всего запеканка сочетается с квашеной капустой или же любыми овощными салатами</li>
+			<li>Степень готовности определять по ароматному мясному запаху. Удачнее всего запеканка сочетается с квашеной капустой или же любыми овощными салатами</li>
 		</ol>
 	</p>
 	<h2 id="6">
@@ -170,7 +175,7 @@
 			<li>Продолжаем жарить еще минуты 3, пока жидкость не выпарится. Добавляем мелко нарубленную петрушку и томатную пасту, перемешиваем и тушим 4 минуты</li>
 			<li>Макароны отвариваем, сливаем воду, затем добавляем 0,5 ст.л. оливкового масла и перемешиваем</li>
 			<li>Готовим соус. Для этого растапливаем в кастрюльке сливочное масло, добавляем муку и размешиваем до однородности. Постепенно, непрерывно помешивая, вливаем молоко и доводим смесь до кипения. Снимаем с огня</li>
-			<li>Собираем запеканку. На дно формы (у меня 35*24 см) кладем половину макарон. Кладем половину бешамеля и равномерно распределяем. Далее кладем фарш, разравниваем. Накрываем оставшимися макаронами. Сверху равномерно распределяем оставшийся соус</li>
+			<li>Собираем запеканку. На дно формы (35*24 см) кладем половину макарон. Кладем половину бешамеля и равномерно распределяем. Далее кладем фарш, разравниваем. Накрываем оставшимися макаронами. Сверху равномерно распределяем оставшийся соус</li>
 			<li>Посыпаем тертым сыром и запекаем в разогретой до 200 градусов духовке в течение 25 минут</li>
 		</ol>
 	</p>
@@ -278,14 +283,14 @@
 			<li>Запекать в духовке при температуре 250 градусов 30-40 минут</li>
 		</ol>
 	</p>
-	<p>
-		<div>
-			<a href="#top">Наверх!</a>
+		<div id="toTop">
+			<p>
+			<a href="#top" title="К началу страницы">Наверх!</a>
+			</p>
 		</div>
-	</p>
-	<p id="footer">
-		2021, idevm<br>
-		Пожалуйста, не крадите эту страницу, хотя она не защищена авторским правом
-	</p>
+	<div id="footer">
+		&copy; 2021, проект idevm<br>
+		Все торговые марки, которые появляются на данном сайте, являются собственностью их владельцев
+	</div>
 </body>
 </html>
