--- a/index.html
+++ b/index.html
@@ -6,19 +6,31 @@
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-	<h1>
-		Добро пожаловать!
-	</h1>
-	<p>
-		Посмотрите <a href="receipts/zapekanki.html">рецепты запеканок!</a>
-	</p>
+	<header>
+		<div id="logo">
+			<img src="logoCat.jpg" height="150px">
+		</div>	
+
+		<h1>
+			Добро пожаловать на страничку!
+		</h1>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="receipts/zapekanki.html">Посмотрите рецепты запеканок</a></li>
+			<li><a href="battleships/battleships.html">Сыграйте в морской бой</a></li>
+			<li><a href="more.html">Сделайте то-нибудь еще...</a></li>
+		</ul>
+	</nav>
+	<div id="video">
+	<video muted autoplay controls loop height="240px" preload="auto" src="nyam.mp4"></video>
 	<br>
-	<p>
-		Или <a href="more.html">что-нибудь еще...</a>
-	</p>
-	<br>
+	</div>
 	<p>
 		Сайт в процессе наполнения
 	</p>
+	<footer>
+		&copy; 2021, idevm<br>Just for fun !<img src="wtfCat.jpg" height="26px">
+	</footer>
 </body>
 </html>
