--- a/404.html
+++ b/404.html
@@ -1,1 +1,10 @@
-<img src="images/404.jpeg" alt="page not found">
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Страница не найдена</title>
+</head>
+<body>
+<img src="images/404.png" alt="page not found">
+</body>
+</html>
+
