--- a/404.html
+++ b/404.html
@@ -2,9 +2,19 @@
 <html>
 <head>
 	<title>Страница не найдена</title>
+	<style type="text/css">
+		div {
+			position: relative;
+			top: 0px;
+			margin: auto;
+			text-align: center;
+		}
+	</style>
 </head>
 <body>
-<img src="images/404.png" alt="page not found">
+	<div>
+		<img src="images/404.png" alt="page not found">
+	</div>	
 </body>
 </html>
 
