--- a/battleships/battleships.html
+++ b/battleships/battleships.html
@@ -54,7 +54,7 @@
 <body>
 	<div id="board">
 		<div id="messageArea"></div>
-		<table>
+		<table id="table">
 			<tr>
 				<td id="00"></td>
 				<td id="01"></td>
