--- a/battleships/battleships.html
+++ b/battleships/battleships.html
@@ -21,6 +21,13 @@
 			color: rgb(83, 175, 19);
 			font-size: 30px;
 		}
+		div#stat{
+			position: absolute;
+			left: 0px;
+			bottom: 0px;
+			color: rgb(83, 175, 19);
+			font-size: 30px;			
+		}
 		table {
 			position: absolute;
 			left: 173px;
@@ -35,13 +42,23 @@
 			position: absolute;
 			bottom: 0px;
 			right: 0px;
-			padding: 15px;
+			padding: 10px;
 			background-color: rgb(83, 175, 19);
 		}
 		form input {
 			background-color: rgb(152, 201, 113);
 			border-color: rgb(83, 175, 19);
+			font-size: 1.3em;
+		}
+		#reload {
+			background-color: rgb(152, 201, 113);
+			border-color: rgb(83, 175, 19);
 			font-size: 1em;
+			position: absolute;
+			top: 0px;
+			right: 0px;
+			font-size: 1.3em;
+			height: 70px;		
 		}
 		.hit {
 			background: url(ship.png) no-repeat center center;
@@ -53,7 +70,7 @@
 </head>
 <body>
 	<div id="board">
-		<div id="messageArea"></div>
+		<div id="messageArea">Нажмите на ячейку поля<br>или введите координаты ячейки и нажмите кнопку "Огонь!"</div>
 		<table id="table">
 			<tr>
 				<td id="00"></td>
@@ -119,10 +136,12 @@
 				<td id="66"></td>
 			</tr>
 		</table>
+		<div id="stat"></div>
 		<form>
 			<input type="text" id="guessInput" placeholder="A0">
 			<input type="button" id="fireButton" value="Огонь!">
 		</form>
+		<input type="button" id="reload" value="Начать сначала">
 	</div>
 	<script src="battleships.js"></script>
 </body>
