--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Добро пожаловать!</title>
+	<title>Всякие штуки</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 	<header>
 		<div id="logo">
-			<img src="logoCat.jpg" height="150px">
+			<img src="logoCat.png" height="150px">
 		</div>	
-
+		<div>
 		<h1>
-			Добро пожаловать на страничку!
+			Добро пожаловать!
 		</h1>
+		</div>
 	</header>
 	<nav>
 		<ul>
@@ -23,7 +24,7 @@
 		</ul>
 	</nav>
 	<div id="video">
-	<video muted autoplay controls loop height="240px" preload="auto" src="nyam.mp4"></video>
+	<video controls loop height="480px" preload="auto" src="nyam.mp4"></video>
 	<br>
 	</div>
 	<p>
