--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 		<ul>
 			<li><a href="receipts/zapekanki.html">Посмотрите рецепты запеканок</a></li>
 			<li><a href="battleships/battleships.html">Сыграйте в морской бой</a></li>
-			<li><a href="more.html">Сделайте то-нибудь еще...</a></li>
+			<li><a href="xoxo/xoxo.html">Сыграйте в крестики-нолики</a></li>
+			<li><a href="more.html">Сделайте что-нибудь еще...</a></li>
 		</ul>
 	</nav>
 	<div id="video">
