--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.5">
 	<title>Крестики-нолики</title>
 	<style type="text/css">
 		body {
@@ -21,6 +22,15 @@
 			text-align: center;
 			font-size: 50px;
 			font-family: Arial;
+		}
+		div#statArea {
+			position: relative;
+			top: 605px;
+			margin: auto;
+			color: blue;
+			text-align: center;
+			font-size: 50px;
+			font-family: Arial;			
 		}
 		table {
 			position: absolute;
@@ -60,6 +70,7 @@
 				<td id="22"></td>
 			</tr>
 		</table>
+		<div id="statArea">Счет 0 : 0</div>
 	</div>
 	<script src="xoxo.js"></script>	
 </body>
