--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -48,11 +48,43 @@
 		.o {
 			background: url(o.png) no-repeat center center;
 		}
+		div#window {
+			display: block;
+			position: absolute;
+			top: 0px;
+			left: 0px;
+			height: 604px;
+			width: 604px;
+			border: solid blue;
+			background-color: lightgray;
+			text-align: center;
+			margin: auto;
+			z-index: 2;
+			font-size: 50px;
+			font-family: Arial;			
+		}
+		form, input {
+			color: blue;
+			font-size: 30px;
+			font-family: Arial;			
+		}
 	</style>
 </head>
 <body>
-	<div id="messageArea">Ваш ход!</div>
+	<div id="messageArea">Крестики-нолики</div>
 	<div id="board">
+	<div id="window">
+		<form id="form">
+			<p><b>За кого будете играть?</b></p>
+  			<p>
+  				<input type="radio" name="answer" value="x" checked=""> Крестики<br>
+  				<input type="radio" name="answer" value="o"> Нолики<br>
+			</p>
+  			<p>
+  				<input id="button" type="button" value="Начать игру!">
+  			</p>
+		</form>
+	</div>
 		<table id="table">
 			<tr>
 				<td id="00"></td>
