--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -47,10 +47,10 @@
 			height: 200px;
 		}
 		.x {
-			background: url(x.png) no-repeat center center;
+			background: url(x.gif) no-repeat center center;
 		}
 		.o {
-			background: url(o.png) no-repeat center center;
+			background: url(o.gif) no-repeat center center;
 		}
 		div#window {
 			display: block;
