--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=0.5">
 	<title>Всякие штуки</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
@@ -18,9 +19,9 @@
 	</header>
 	<nav>
 		<ul>
-			<li><a href="receipts/zapekanki.html">Посмотрите рецепты запеканок</a></li>
-			<li><a href="battleships/battleships.html">Сыграйте в морской бой</a></li>
 			<li><a href="xoxo/xoxo.html">Сыграйте в крестики-нолики</a></li>
+			<li><a href="battleships/battleships.html">Сыграйте в морской бой</a></li>
+			<li><a href="receipts/zapekanki.html">Посмотрите рецепты запеканок</a></li>
 			<li><a href="more.html">Сделайте что-нибудь еще...</a></li>
 		</ul>
 	</nav>
