--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -60,7 +60,7 @@
 			height: 500px;
 			width: 500px;
 			border: solid blue;
-			background-color: lightgray;
+			background-color: lightblue;
 			text-align: center;
 			margin: auto;
 			z-index: 2;
