--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -13,8 +13,8 @@
 			<form id="form">
 				<p><b>Выберите символ</b></p>
   				<p>
-  				<input id="buttonX" type="button" value="Крестики">
-  				<input id="buttonO" type="button" value="Нолики">
+  				<input id="buttonX" type="button" value="Крестик">
+  				<input id="buttonO" type="button" value="Нолик">
   				</p>
 			</form>
 		</div>
