--- a/index.html
+++ b/index.html
@@ -4,36 +4,25 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=0.5">
 	<title>Всякие штуки</title>
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="index2.css">
 </head>
 <body>
 	<header>
-		<div id="logo">
-			<img src="logoCat.png" height="150px">
-		</div>	
-		<div>
-		<h1>
-			Добро пожаловать!
-		</h1>
-		</div>
+		<div id="logoText">idevm</div>	
+		<div id="headerText">Стартовая страница</div>
 	</header>
-	<nav>
-		<ul>
-			<li><a href="xoxo/xoxo.html">Сыграйте в крестики-нолики</a></li>
-			<li><a href="battleships/battleships.html">Сыграйте в морской бой</a></li>
-			<li><a href="receipts/zapekanki.html">Посмотрите рецепты запеканок</a></li>
-			<li><a href="more.html">Сделайте что-нибудь еще...</a></li>
-		</ul>
-	</nav>
-	<div id="video">
-	<video controls loop height="480px" preload="auto" src="nyam.mp4"></video>
-	<br>
+	<div id="logo"><img src="logo.png" height="68px"></div>
+	<div id="intro"><p>Добро пожаловать!<br>Здесь можно найти развлечение по вкусу: сыграть в игру, посмотреть рецепты или видео с котами!</p></div>
+	<div id="content">
+		<div id="cB1"><div class="a"><a href="xoxo/xoxo.html">Сыграйте в крестики-нолики</a></div></div>
+		<div id="cB2"><div class="a"><a href="battleships/battleships.html">Сыграйте в морской бой</a></div></div>
+		<div id="cB3"><div class="a"><a href="receipts/zapekanki.html">Посмотрите рецепты запеканок</a></div></div>
+		<div id="cB3"><div class="a"><a href="more.html">Сделайте что-нибудь еще...</a></div></div>
+		<div id="video"><div class="v"><video controls loop height="200px" preload="auto" src="nyam.mp4"></video></div></div>
 	</div>
-	<p>
-		Сайт в процессе наполнения
-	</p>
 	<footer>
-		&copy; 2021, idevm<br>Just for fun !<img src="wtfCat.jpg" height="26px">
+		<div id="footerText">&copy; 2021, idevm<br>Just for fun !</div>
+		<div id="wtfCat"><img src="wtfCat.jpg" height="40px"></div>
 	</footer>
 </body>
 </html>
