new graphic added

--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -21,8 +21,9 @@
 	<noscript><div><img src="https://mc.yandex.ru/watch/72061369" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 	<!-- /Yandex.Metrika counter -->
 </head>
-<body>
+<body class="lightBody">
 	<div id="messageArea">Крестики-нолики</div>
+	<div id="colorMode" class="lightMode"></div>
 	<div id="board">
 		<div id="window">
 			<form id="form">
