--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -22,6 +22,7 @@
 	<!-- /Yandex.Metrika counter -->
 </head>
 <body class="lightBody">
+	<div id="loadImages" class="x o"></div>
 	<div id="messageArea">Крестики-нолики</div>
 	<div id="colorMode" class="lightMode"></div>
 	<div id="board">
