--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -52,14 +52,7 @@
 				<td id="22"></td>
 			</tr>
 		</table>
-		<div id="winRow0"></div>
-		<div id="winRow1"></div>
-		<div id="winRow2"></div>
-		<div id="winCol0"></div>
-		<div id="winCol1"></div>
-		<div id="winCol2"></div>
-		<div id="winDia1"></div>
-		<div id="winDia2"></div>
+		<div id="winLine"></div>
 		<div id="statArea"></div>
 		<form>
 			<input id="newGameButton" type="button" value="Новая игра">
