--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -21,12 +21,12 @@
 	<noscript><div><img src="https://mc.yandex.ru/watch/72061369" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 	<!-- /Yandex.Metrika counter -->
 </head>
-<body class="lightBody">
+<body class="darkBody">
 	<div id="loadImages" class="x o"></div>
 	<div id="messageArea">Крестики-нолики</div>
-	<div id="colorMode" class="lightMode"></div>
+	<div id="colorMode" class="darkMode"></div>
 	<div id="board">
-		<div id="window" class="lightWindow">
+		<div id="window" class="darkWindow">
 			<div id="chooseSymbol">
 				<p><b>Выберите символ</b></p>
   			</div>	
