--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 	</header>
 	<div id="intro"><p>Добро пожаловать!<br>Здесь можно найти развлечение по вкусу: сыграть в игру, посмотреть рецепты или видео с котами!</p></div>
 	<div id="content">
-		<div id="cB1"><div class="a"><a href="xoxo/xoxo.html">Сыграйте в крестики-нолики</a></div></div>
+		<div id="cB1"><a href="xoxo/xoxo.html">Сыграйте в крестики-нолики</a></div>
 		<div id="cB2"><a href="battleships/battleships.html">Сыграйте в морской бой</a></div>
 		<div id="cB3"><a href="receipts/zapekanki.html">Посмотрите рецепты запеканок</a></div>
-		<div id="cB4"><a href="more.html">Сделайте что-нибудь еще...</a></div>
+		<div id="cB4"><a href="more.html">Еще много интересного</a></div>
 	</div>
 	<div id="video"><div class="v"><video controls loop height="240px" preload="auto" src="nyam.mp4"></video></div></div>
 	<footer>
-	</footer>
 		<div id="footerText">&copy; 2021, idevm Just for fun !</div>
 		<div id="wtfCat"><img src="wtfCat.jpg" height="40px"></div>
+	</footer>
 </body>
 </html>
