--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -22,7 +22,10 @@
 	<!-- /Yandex.Metrika counter -->
 </head>
 <body class="darkBody">
-	<div id="loadImages" class="x o"></div>
+	<div id="loadImages">
+		<img src="x.png">
+		<img src="o.png">
+	</div>
 	<div id="messageArea">Крестики-нолики</div>
 	<div id="colorMode" class="darkMode"></div>
 	<div id="board">
