--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -26,8 +26,10 @@
 		<img src="x.png">
 		<img src="o.png">
 	</div>
+	<audio id="music" src="music.wav" type="audio/wav" loop preload></audio>
 	<div id="messageArea">Крестики-нолики</div>
 	<div id="colorMode" class="darkMode"></div>
+	<div id="soundMode" class="mute"></div>
 	<div id="board">
 		<div id="window" class="darkWindow">
 			<div id="chooseSymbol">
