--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -26,10 +26,16 @@
 		<img src="x.png">
 		<img src="o.png">
 	</div>
-	<audio id="music" src="music.wav" type="audio/wav" loop preload></audio>
+	<audio class="sounds" id="win" src="win.wav" type="audio/wav" preload></audio>
+	<audio class="sounds" id="fail" src="fail.wav" type="audio/wav" preload></audio>
+	<audio class="sounds" id="gameOver" src="gameOver.wav" type="audio/wav" preload></audio>
+	<audio class="sounds" id="x" src="x.wav" type="audio/wav" preload></audio>
+	<audio class="sounds" id="o" src="o.wav" type="audio/wav" preload></audio>
+	<audio class="sounds" id="click" src="click.wav" type="audio/wav" preload></audio>	
+	<audio class="sounds" id="clock" src="clock.wav" type="audio/wav" preload></audio>		
 	<div id="messageArea">Крестики-нолики</div>
 	<div id="colorMode" class="darkMode"></div>
-	<div id="soundMode" class="mute"></div>
+	<div id="soundMode" class="sound"></div>
 	<div id="board">
 		<div id="window" class="darkWindow">
 			<div id="chooseSymbol">
