--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -25,6 +25,7 @@
 	<div id="messageArea">Крестики-нолики</div>
 	<div id="colorMode" class="darkMode"></div>
 	<div id="soundMode" class="sound"></div>
+	<div id="starScore">0</div>
 	<div id="board">
 		<div id="window" class="darkWindow">
 			<div id="chooseSymbol">
