--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -22,7 +22,7 @@
 	<!-- /Yandex.Metrika counter -->
 </head>
 <body class="darkBody">		
-	<div id="messageArea">Крестики-нолики</div>
+	<!-- <div id="messageArea">Крестики-нолики</div>
 	<div id="colorMode" class="darkMode"></div>
 	<div id="soundMode" class="sound"></div>
 	<div id="starScore">0</div>
@@ -55,7 +55,7 @@
 		<div id="statArea"></div>
 		<div id="newGameButton">Новая игра</div>
 		<div id="continueGameButton">Продолжить</div>
-	</div>
+	</div> -->
 	<script src="xoxo.js"></script>	
 </body>
 </html>
