--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -55,7 +55,7 @@
 			<div id="winLine"></div>
 		</div>
 		<div id="statArea"></div>
-		<div id="newGameButton">Новая игра</div>
+		<div id="endGameButton">Завершить</div>
 		<div id="continueGameButton">Продолжить</div>
 	</div>		
 	<script src="xoxo.js"></script>	
