--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -21,14 +21,15 @@
 	<noscript><div><img src="https://mc.yandex.ru/watch/72061369" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 	<!-- /Yandex.Metrika counter -->
 </head>
-<body class="darkBody">
+<body class="lightBody">
 	<div id="field">
 		<div id="messageArea">Крестики-нолики</div>
-		<div id="colorMode" class="darkMode"></div>
+		<div id="colorMode" class="lightMode"></div>
 		<div id="soundMode" class="sound"></div>
 		<div id="starScore">0</div>
+		<div id="difMode" class="normal">/</div>
 		<div id="board">
-			<div id="window" class="darkWindow">
+			<div id="window" class="lightWindow">
 				<div id="chooseSymbol">
 					<p><b>Выберите символ</b></p>
 	  			</div>	
