--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -22,6 +22,11 @@
 	<!-- /Yandex.Metrika counter -->
 </head>
 <body class="lightBody">
+	<div id="loadScreen">
+		<div id="header">КРЕСТИКИ-НОЛИКИ</div>
+		<div id="logo"></div>
+		<div id="loading">ЗАГРУЗКА</div>
+	</div>
 	<div id="field">
 		<div id="messageArea">Крестики-нолики</div>
 		<div id="colorMode" class="lightMode"></div>
